# django-template-lsp

./: .gitignore  Makefile  README.md  pyproject.toml  releasing.md  setup.cfg  setup.py  text.html  tox.ini
.github/workflows/: release.yml  tests.yml
djlsp/: __init__.py  __main__.py  ast_context_collector.py  cli.py  collector_payload.py  completion.py  constants.py  context_inference.py  definition.py  hover.py  index.py  parser.py  server.py
djlsp/contrib/: wagtail.py
djlsp/plugins/: __init__.py  base.py  core_template.py  django_models.py  django_settings.py  django_urls.py  manager.py
djlsp/scripts/: django-collector.py
djlsp/services/: __init__.py  cache_service.py  collector_runner.py  command_runner.py  version_check_service.py  watcher_service.py
tests/: test_ast_context_collector.py  test_collector_payload.py  test_completion_kinds.py  test_django_collector.py  test_django_models_plugin.py  test_django_settings_plugin.py  test_django_urls_plugin.py  test_parser.py  test_phase0_baseline.py  test_plugins.py  test_server_config.py  test_services.py  test_watcher_service.py
tests/django_test/: manage.py
tests/django_test/.helix/: languages.toml
tests/django_test/django_app/: apps.py  urls.py  views.py
tests/django_test/django_app/templatetags/: django_app.py
tests/django_test/django_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/django_test/test-static-folder/: .gitkeep  website.css
vscode/: .gitignore  LICENSE.md  README.md  RELEASE.md  package-lock.json  package.json
vscode/client/: package-lock.json  package.json
vscode/client/src/: extension.ts
